# PlantStation

./: Cargo.toml
config/: ps_config_odroid_c2.json
src/: app_context.rs  controller.rs  hw.rs  main.rs  msg.rs
src/hw/: adc.rs  i2c_mgmt.rs  thermometer.rs
src/msg/: ps.rs
tools/: plotter.py
