[[bin]]
name = "PlantStation"
path = "src/main.rs"

[[bin]]
name = "Controller"
path = "src/controller.rs"

[package]
name = "PlantStation"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
i2c-linux = "0.1.2"
json = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
bincode = "1.3.3"
derive-new = "0.7.0"
bit-set = "0.8.0"
bit-vec = "0.8.0"
serde-generate = "0.32.0"
serde-reflection = "0.5.1"
chrono = "0.4.43"
log = "0.4.29"